# rust-cidr

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CHECKLIST.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
.travis/: id_rsa  travis-doc-upload.cfg  travis-doc-upload.sh
src/: address.rs  bigendian.rs  display_buffer.rs  errors.rs  family.rs  inet_iterator.rs  internal_traits.rs  lib.rs  local_addr_parser.rs  num.rs  serde_common.rs  traits.rs
src/bitstring/: address.rs  iter.rs  mod.rs  word_string.rs
src/cidr/: any.rs  bitstring_tests.rs  combined.rs  direct.rs  from_str.rs  mod.rs  tests.rs
src/cidr/serde/: mod.rs  tests.rs
src/inet/: combined.rs  direct.rs  from_str.rs  mod.rs  tests.rs
src/inet/serde/: mod.rs  tests.rs
src/inet_pair/: combined.rs  direct.rs  mod.rs
src/parsers/: combinators.rs  inetaddr.rs  ipv4_short.rs  mod.rs
src/serde_common/: addr_len_map.rs  mod.rs  variant.rs  variant_any.rs
tests/: version-numbers.rs
