[package]
name = "cidr"
# also bump version in html_root_url in src/lib.rs
version = "0.2.3"
edition = "2018"
authors = ["Stefan Bühler <stbuehler@web.de>"]
description = "IP network and IP host within network types"
documentation = "https://docs.rs/cidr"
homepage = "https://github.com/stbuehler/rust-cidr"
repository = "https://github.com/stbuehler/rust-cidr"
categories = ["data-structures","network-programming"]
keywords = ["cidr", "network"]
readme = "README.md"
license = "MIT"
exclude = ["CHECKLIST.md"]

[badges]
appveyor = { repository = "stbuehler/rust-cidr" }

[features]
default = ["std"]
no_unsafe = []
std = []

[dependencies]
bitstring = { version = "0.1.0", optional = true }
serde = { version = "1.0.27", optional = true }

[dev-dependencies]
serde_test = "1.0.27"
bincode = "1.3.1"
version-sync = "0.9.1"

[package.metadata.docs.rs]
all-features = true
targets = []

[lints.rust]
# allow #[cfg_attr(doc_cfg, doc(cfg(...)))]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
